[package]
name = "bevy_quit"
version = "0.1.1"
edition = "2021"
authors = ["Joan Antoni <jotare>"]
description = "Simple plugin to easily add keybinds to exit a bevy game"
readme = "README.md"
keywords = [
    "game-dev",
    "game-engine",
    "bevy-plugin"
]
categories = ["game-engines"]
license-file = "LICENSE"
repository = "https://github.com/jotare/bevy_quit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
